<resources>
    <string name="app_name">Playlister</string>
    <string name="sign_up_message">WELCOME</string>
    <string name="sign_up_form_title" >SIGN UP!</string>
    <string name="sign_up_username_hint">Enter your username</string>
    <string name="sign_up_first_name_hint">First name</string>
    <string name="sign_up_last_name_hint">Last name</string>
    <string name="sign_up_email_hint">Email address</string>
    <string name="sign_up_password_hint">Choose a password</string>
    <string name="sign_up_login_link"><u>ALREADY HAVE AN ACCOUNT? LOG IN!</u></string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="add_genre_button">ADD TO LIBRARY</string>
    <string name="add_genre_form_hint">WHAT\'S IT CALLED ?</string>
    <string name="add_genre_form_name">Genre name</string>
    <string name="login_message">HELLO AGAIN</string>
    <string name="login_username_label">USERNAME</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_sign_up_link"><u>DON\'T HAVE AN ACCOUNT? SIGN UP!</u></string>
    <string name="login_button">LOGIN</string>
    <string name="login_password_label">PASSWORD</string>
    <string name="login_form_auth_error">Wrong crendentials</string>
    <string name="home_page_title">YOUR PLAYLISTS</string>
    <string name="home_logout_button">LOGOUT</string>
    <string name="playlist_create_button">CREATE</string>
    <string name="nav_home">Home</string>
    <string name="nav_music_library">Music</string>
    <string name="nav_genres">Genres</string>
    <string name="nav_artists">Artists</string>
    <string name="nav_tags">Tags</string>
    <string name="song_view_title">MUSIC LIBRARY ></string>
    <string name="song_view_song_title_placeholder"><i>Song Title</i></string>
    <string name="song_view_edit_button">EDIT</string>
    <string name="song_view_remove_button">REMOVE</string>
    <string name="song_view_main_song_title_placeholder">SONG TITLE</string>
    <string name="song_view_artist_name_placeholder">By <i>Artist</i></string>
    <string name="song_view_key_placeholder">Key</string>
    <string name="song_view_bpm_placeholder">BPM</string>
    <string name="song_view_url">URL</string>
    <string name="song_view_duration">DURATION</string>
    <string name="song_view_release_date">RELEASE DATE</string>
    <string name="song_view_url_place_holder">https://website.com/file.mp3</string>
    <string name="song_view_duration_placeholder">X minutes and X seconds</string>
    <string name="song_view_release_date_placeholder">Month, Day Year</string>
    <string name="song_view_genres">GENRES</string>
    <string name="song_view_tags">TAGS</string>
    <string name="song_view_genres_list_placeholder">GENRE</string>
    <string name="song_view_tags_list_placeholder">TAG</string>
    <string name="add_genre_message">ADD GENRE</string>
    <string name="add_tag_message">ADD TAG</string>
    <string name="add_tag_form_name">Tag name</string>
    <string name="edit_tag_message">EDIT TAG</string>
    <string name="edit_tag_form_hint">TAG NAME</string>
    <string name="save_changes_button">SAVE CHANGES</string>
    <string name="edit_tag_form_name">ENTER TAG NAME</string>
    <string name="edit_tag_remove_link"><u>REMOVE</u></string>
    <string name="playlists_view_title">PLAYLISTS ></string>
    <string name="playlist_view_stats_button">VIEW STATS</string>
    <string name="playlists_view_edit_button">EDIT</string>
    <string name="playlists_view_remove_button">REMOVE</string>
    <string name="artists_view_title">ARTISTS</string>
    <string name="artists_view_add_button">ADD</string>
    <string name="artist_add_question">WHAT\'S THEIR NAME ?</string>
    <string name="artist_add_btn">ADD TO LIBRARY</string>
    <string name="artist_add_name_hint">NAME</string>
    <string name="artist_add">ADD ARTIST</string>
    <string name="genre_edit">EDIT GENRE</string>
    <string name="genre_edit_name_hint">ENTER GENRE NAME</string>
    <string name="genre_edit_button">SAVE CHANGES</string>
    <string name="genre_edit_remove"><u>REMOVE</u></string>
    <string name="artist_edit">EDIT ARTIST</string>
    <string name="artist_edit_name_hint">ENTER ARTIST NAME</string>
    <string name="artist_edit_button">SAVE CHANGES</string>
    <string name="artist_edit_name">NAME</string>
    <string name="artist_edit_remove">REMOVE</string>
    <string name="music_library_title">MUSIC LIBRARY</string>
    <string name="music_library_button">ADD</string>
    <string name="genre_list_title">MUSICAL GENRES</string>
    <string name="genre_list_button">ADD</string>
    <string name="tags_view_title">Tags</string>
    <string name="tags_add_button">ADD</string>
    <string name="edit_song_message">EDIT SONG</string>
    <string name="song_form_title">SONG INFO</string>
    <string name="song_name_hint">Song title</string>
    <string name="song_minor_hint">Key</string>
    <string name="song_bpm_hint">BPM</string>
    <string name="song_url_hint">Song URL</string>
    <string name="song_duration_title">DURATION</string>
    <string name="song_release_date_title">RELEASE DATE</string>
    <string name="song_duration_hint">MM:SS</string>
    <string name="song_release_date_hint">DD/MM/YYYY</string>
    <string name="song_genres_title">GENRES</string>
    <string name="song_tags_title">TAGS</string>
    <string name="song_add_genre_button">ADD GENRE</string>
    <string name="song_add_tag_title">ADD TAG</string>
    <string name="song_edit_save_button">SAVE CHANGES</string>
    <string name="song_add_message">ADD SONG</string>
    <string name="song_add_save_button">ADD TO LIBRARY</string>
    <string name="playlist_add_title">NEW PLAYLIST</string>
    <string name="playlist_add_name">GIVE IT A NAME</string>
    <string name="playlist_add_songs">START ADDING SONGS</string>
    <string name="playlist_add_name_hint">Name of the playlist</string>
    <string name="playlist_add_tags">ADD TAGS</string>
    <string name="playlist_add_song_add_button">ADD SONG</string>
    <string name="playlist_edit_title">EDIT PLAYLIST</string>
    <string name="playlist_edit_name">NAME</string>
    <string name="playlist_edit_songs">SONGS</string>
    <string name="playlist_edit_tags">TAGS</string>
    <string name="playlist_add_submit">CREATE</string>
    <string name="genre_list_item_name_placeholder">NAME OF GENRE</string>
    <string name="genre_list_item_songs_placeholder">songs</string>
    <string name="genre_list_item_playlists_placeholder">playlists</string>
    <string name="artist_list_item_name_placeholder">NAME OF GENRE</string>
    <string name="artist_list_item_songs_placeholder">songs</string>
    <string name="artist_list_item_playlists_placeholder">playlists</string>
    <string name="playlist_list_item_name_placeholder">NAME OF PLAYLIST</string>
    <string name="playlist_list_item_songs_placeholder">songs</string>
    <string name="playlist_list_item_duration_placeholder">Duration</string>
    <string name="tags_list_item_name_placeholder">NAME OF TAG</string>
    <string name="tags_list_item_songs_placeholder">song</string>
    <string name="tags_list_item_playlists_placeholder">playlists</string>
    <string name="songs_list_item_name_placeholder">SONG NAME</string>
    <string name="songs_list_item_duration_placeholder">MM:SS</string>
    <string name="songs_list_item_key_placeholder">key</string>
    <string name="songs_list_item_bpm_placeholder">BPM</string>
    <string name="songs_list_item_artist_placeholder">ARTIST</string>
    <string name="minute_plural">minutes</string>
    <string name="minute_singular">minute</string>
    <string name="second_plural">seconds</string>
    <string name="second_singular">second</string>
</resources>