<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            style="@style/pageHeader">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_view_title"
                android:layout_marginRight="10dp"
                style="@style/pageTitle"
                />

            <TextView
                android:id="@+id/song_view_song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_view_song_title_placeholder"
                style="@style/pageTitle"
                />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/song_view_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/playlistCreateButton">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/playlistCreateButtonText"
                    android:text="@string/icon_edit"
                    android:fontFamily="@font/fa_solid_900" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/playlistCreateButtonText"
                    android:text="@string/song_view_edit_button" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <LinearLayout
                android:id="@+id/song_view_remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/error"
                style="@style/playlistCreateButton">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/playlistCreateButtonText"
                    android:text="@string/icon_trash"
                    android:fontFamily="@font/fa_solid_900" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/playlistCreateButtonText"
                    android:text="@string/song_view_remove_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        style="@style/songViewIcon"
                        android:background="@drawable/ic_music_solid" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/songViewSongTitle"
                        android:text="@string/song_view_main_song_title_placeholder" />

                    <TextView
                        style="@style/songViewArtist"
                        android:text="@string/song_view_artist_name_placeholder"/>

                    <TextView
                        style="@style/songViewMusicalInfo"
                        android:text="@string/song_view_key_placeholder"/>

                    <TextView
                        style="@style/songViewMusicalInfo"
                        android:text="@string/song_view_bpm_placeholder"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/faded_white_1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/songViewGeneralInfo"
                        android:text="@string/song_view_url"/>

                    <TextView
                        style="@style/songViewGeneralInfo"
                        android:text="@string/song_view_duration"/>

                    <TextView
                        style="@style/songViewGeneralInfo"
                        android:text="@string/song_view_release_date"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/songViewGeneralInfoData"
                        android:text="@string/song_view_url_place_holder"/>

                    <TextView
                        style="@style/songViewGeneralInfoData"
                        android:text="@string/song_view_duration_placeholder"/>

                    <TextView
                        style="@style/songViewGeneralInfoData"
                        android:text="@string/song_view_release_date_placeholder"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/song_view_genres"
                        style="@style/songViewGenres"/>

                    <TextView
                        android:text="@string/song_view_genres_list_placeholder"
                        style="@style/songViewListElement"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/song_view_tags"
                        style="@style/songViewGenres"/>

                    <TextView
                        android:text="@string/song_view_tags_list_placeholder"
                        style="@style/songViewListElement"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center">

        <LinearLayout
            style="@style/navButton">

            <TextView
                style="@style/navButtonIcon"
                android:background="@drawable/ic_home_solid"/>

            <TextView
                style="@style/navButtonText"
                android:text="@string/nav_home"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            style="@style/navButton">

            <TextView
                style="@style/navButtonIconCurrent"
                android:background="@drawable/ic_music_solid" />

            <TextView
                style="@style/navButtonTextCurrent"
                android:text="@string/nav_music_library"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            style="@style/navButton">

            <TextView
                style="@style/navButtonIcon"
                android:background="@drawable/ic_guitar_solid"/>

            <TextView
                style="@style/navButtonText"
                android:text="@string/nav_genres"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            style="@style/navButton">

            <TextView
                style="@style/navButtonIcon"
                android:background="@drawable/ic_users_solid" />

            <TextView
                style="@style/navButtonText"
                android:text="@string/nav_artists"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <LinearLayout
            style="@style/navButton">

            <TextView
                style="@style/navButtonIcon"
                android:background="@drawable/ic_tag_solid" />

            <TextView
                style="@style/navButtonText"
                android:text="@string/nav_tags"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>