<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textColor="#4EF9F3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/signupForm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/nav"
        android:divider="@drawable/empty_tall_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loginFormUserNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login_username_label"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/loginFormUserName"
            style="@style/formField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/sign_up_username_hint"
            android:inputType="textPersonName"
            android:textAppearance="@style/formField" />

        <TextView
            android:id="@+id/loginFormPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login_password_label"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/loginFormPassword"
            style="@style/formField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/formField"
            android:textColorHint="@color/form_field_hint" />

        <TextView
            android:id="@+id/loginFormSignUpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up_link"
            android:textAlignment="center"
            android:textAppearance="@style/formLink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginButton"
                style="@style/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>