<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edit_genre_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="160dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/vivid_text_primary"
        android:textSize="30sp"
        android:text="@string/genre_edit" />

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/nav"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/artist_add_name_hint"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" >
        </Space>

        <EditText
            android:id="@+id/edit_genre_hint"
            style="@style/formField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/genre_edit_name_hint"
            android:inputType="textPersonName"
            android:textAppearance="@style/formField" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/edit_genre_btn"
                style="@style/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_edit_button" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp"></Space>

            <TextView
                android:id="@+id/edit_genre_remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_edit_remove"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textAppearance="@style/formLink" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>