<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/genresListPseudoElement"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="25dp"
    android:paddingTop="20dp"
    android:paddingRight="25dp"
    android:paddingBottom="20dp"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="13dp">

        <TextView
            style="@style/listItemIcon"
            android:background="@drawable/ic_music_solid" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/songsListElementName"
            style="@style/listItemName"
            android:text="@string/songs_list_item_name_placeholder" />

        <TextView
            android:id="@+id/songsListElementArtist"
            style="@style/listItemDataSecondary"
            android:text="@string/songs_list_item_artist_placeholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="0dp">

        <TextView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/circle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/genresListPseudoElementSongs"
            style="@style/listItemDataImportant"
            android:text="@string/songs_list_item_key_placeholder" />

        <TextView
            android:id="@+id/genresListPseudoElementPlaylists"
            style="@style/listItemData"
            android:text="@string/song_view_bpm_placeholder" />
    </LinearLayout>

</LinearLayout>